@@ -328,15 +328,42 @@ operator|new
 name|ModifiableSolrParams
 argument_list|()
 decl_stmt|;
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Creating UpdateShardHandler HTTP client with params: {}"
-argument_list|,
+if|if
+condition|(
+name|cfg
+operator|!=
+literal|null
+condition|)
+block|{
 name|clientParams
+operator|.
+name|set
+argument_list|(
+name|HttpClientUtil
+operator|.
+name|PROP_SO_TIMEOUT
+argument_list|,
+name|cfg
+operator|.
+name|getDistributedSocketTimeout
+argument_list|()
 argument_list|)
 expr_stmt|;
+name|clientParams
+operator|.
+name|set
+argument_list|(
+name|HttpClientUtil
+operator|.
+name|PROP_CONNECTION_TIMEOUT
+argument_list|,
+name|cfg
+operator|.
+name|getDistributedConnectionTimeout
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|client
 operator|=
 name|HttpClientUtil
@@ -346,6 +373,53 @@ argument_list|(
 name|clientParams
 argument_list|,
 name|clientConnectionManager
+argument_list|)
+expr_stmt|;
+comment|// following is done only for logging complete configuration.
+comment|// The maxConnections and maxConnectionsPerHost have already been specified on the connection manager
+if|if
+condition|(
+name|cfg
+operator|!=
+literal|null
+condition|)
+block|{
+name|clientParams
+operator|.
+name|set
+argument_list|(
+name|HttpClientUtil
+operator|.
+name|PROP_MAX_CONNECTIONS
+argument_list|,
+name|cfg
+operator|.
+name|getMaxUpdateConnections
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|clientParams
+operator|.
+name|set
+argument_list|(
+name|HttpClientUtil
+operator|.
+name|PROP_MAX_CONNECTIONS_PER_HOST
+argument_list|,
+name|cfg
+operator|.
+name|getMaxUpdateConnectionsPerHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Created UpdateShardHandler HTTP client with params: {}"
+argument_list|,
+name|clientParams
 argument_list|)
 expr_stmt|;
 block|}
