@@ -1260,39 +1260,6 @@ name|config
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|params
-operator|.
-name|get
-argument_list|(
-name|PROP_SO_TIMEOUT
-argument_list|)
-operator|!=
-literal|null
-operator|||
-name|params
-operator|.
-name|get
-argument_list|(
-name|PROP_CONNECTION_TIMEOUT
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|SolrException
-argument_list|(
-name|ErrorCode
-operator|.
-name|SERVER_ERROR
-argument_list|,
-literal|"The socket connect and read timeout cannot be set here and must be set"
-argument_list|)
-throw|;
-block|}
 name|cm
 operator|.
 name|setMaxTotal
@@ -1514,14 +1481,6 @@ name|setupBuilder
 argument_list|(
 name|newHttpClientBuilder
 argument_list|,
-name|params
-operator|==
-literal|null
-condition|?
-operator|new
-name|ModifiableSolrParams
-argument_list|()
-else|:
 name|params
 argument_list|)
 decl_stmt|;
